--- a/comingsoon/css/style.css
+++ b/comingsoon/css/style.css
@@ -22,6 +22,21 @@
    Global Styles
 ================================================== */
 
+@font-face
+{
+  font-family: "AttenRound";
+  src: url('fonts/AttenRoundNewBold.otf');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face
+{
+  font-family: "InterUI";
+  src: url('fonts/Inter-UI-Black.otf');
+  font-weight: normal;
+  font-style: normal;
+}
+
 *
 {
 	-webkit-box-sizing: border-box;
@@ -41,7 +56,7 @@ html
 
 body
 {
-	font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
+	font-family: "AttenRound", Arial, Helvetica, sans-serif;
 	font-size: 20px;
 	line-height: 32px;
 	font-weight: 300;
@@ -92,6 +107,10 @@ strong
 em
 {
 	font-style: italic;
+}
+
+h1 {
+	font-family: 'InterUI';
 }
 
 h1, h2, h3
@@ -615,6 +634,13 @@ h1, h2, h3
 	position: absolute;
 	top: 0;
 	left: 0;
+}
+
+p.h2 {
+	font-size: 38px;
+	line-height: 38px;
+	font-weight: bold;
+	color: #666 !important;
 }
 
 img.logo {
