--- a/comingsoon/css/style.css
+++ b/comingsoon/css/style.css
@@ -36,6 +36,20 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face
+{
+  font-family: "InterUI";
+  src: url('fonts/Inter-UI-BlackItalic.otf');
+  font-weight: normal;
+  font-style: italic;
+}
+@font-face
+{
+  font-family: "BlackHanSans";
+  src: url('fonts/BlackHanSans-Regular.ttf');
+  font-weight: normal;
+  font-style: normal;
+}
 
 *
 {
@@ -634,6 +648,10 @@ h1, h2, h3
 	position: absolute;
 	top: 0;
 	left: 0;
+}
+
+.blackhan {
+	font-family: 'BlackHanSans';
 }
 
 p.h2 {
