--- a/comingsoon/css/style.css
+++ b/comingsoon/css/style.css
@@ -655,10 +655,11 @@ h1, h2, h3
 }
 
 p.h2 {
-	font-size: 38px;
+	font-size: 32px;
 	line-height: 38px;
 	font-weight: bold;
 	color: #666 !important;
+	margin-top: 30px;
 }
 
 img.logo {
